--- a/src/templates/main/base.html
+++ b/src/templates/main/base.html
@@ -16,11 +16,14 @@
         .navbar {
             font-size: larger;
         }
+        .nav-link {
+            color: white!important;
+        }
       </style>
   </head>
   <body>
     {% block navbar %}
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" href="{% url 'index' %}">SMS-SYSTEM</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
