--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -50,8 +50,8 @@
               <i class="fas fa-user"></i> Login/Signup </a>
 
             <div class="dropdown-menu dropdown-menu-right dropdown-info" aria-labelledby="navbarDropdownMenuLink2">
-              <a class="dropdown-item" href="{% url 'user_login' %}">Login</a>
-              <a class="dropdown-item" href="{% url 'signup' %}">Signup</a>
+              <a class="dropdown-item" href="{% url 'login' %}">Login</a>
+              <a class="dropdown-item" href="{% url 'register' %}">Signup</a>
             </div>
               {% endif %}
           </li>
