--- a/templates/main/login.html
+++ b/templates/main/login.html
@@ -1,18 +1,86 @@
 {% extends 'main/base.html' %}
 {% load static %}
 {% block body %}
-    <br>
-    <hr>
-    <div class="jumbotron">
-        <h1>Login here :</h1>
-        <form method="post" action="{% url 'user_login' %}">
-            {% csrf_token %}
+{#    <br>#}
+{#    <hr>#}
+{#    <div class="jumbotron">#}
+{#        <h1>Login here :</h1>#}
+{#        <form method="post" action="{% url 'user_login' %}">#}
+{#            {% csrf_token %}#}
             {# A more "HTML" way of creating the login form#}
-            <label for="username">Username:</label>
-            <input type="text" name="username" placeholder="Username">
-            <label for="password">Password:</label>
-            <input type="password" name="password" placeholder="Password">
-            <input type="submit" name="" value="Login">
-        </form>
-    </div>
+{#            <label for="username">Username:</label>#}
+{#            <input type="text" name="username" placeholder="Username">#}
+{#            <label for="password">Password:</label>#}
+{#            <input type="password" name="password" placeholder="Password">#}
+{#            <input type="submit" name="" value="Login">#}
+{#        </form>#}
+{#    </div>#}
+
+	<style type="text/css">
+	  .form-signin {
+	  width: 100%;
+	  max-width: 330px;
+	  padding: 15px;
+	  margin: auto;
+	  }
+
+	  .form-signin .form-control {
+	    position: relative;
+	    box-sizing: border-box;
+	    height: auto;
+	    padding: 10px;
+	    font-size: 16px;
+	  }
+	  .form-signin .form-control:focus {
+	    z-index: 2;
+	  }
+	  .form-signin input[type="email"] {
+	    margin-bottom: -1px;
+	    border-bottom-right-radius: 0;
+	    border-bottom-left-radius: 0;
+	  }
+	  .form-signin input[type="password"] {
+	    margin-bottom: 10px;
+	    border-top-left-radius: 0;
+	    border-top-right-radius: 0;
+	  }
+	  .h3{
+	    text-align: center;
+	  }
+	</style>
+
+
+	<form class="form-signin" method="post">{% csrf_token %}
+	<div class="d-flex flex-column pb-3">
+{#	  <img class="img-fluid mx-auto d-block" src="{% static 'codingwithmitch_logo.png' %}" alt="codingwithmitch logo" width="72" height="72">#}
+	</div>
+	  <h1 class="h3 mb-3 font-weight-normal">Login</h1>
+
+	  <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+
+	  <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
+
+	  {% for field in login_form %}
+	      <p>
+	        {% for error in field.errors %}
+	          <p style="color: red">{{ error }}</p>
+	        {% endfor %}
+	      </p>
+	  {% endfor %}
+	  {% if login_form.non_field_errors %}
+	    <div style="color: red">
+	      <p>{{login_form.non_field_errors}}</p>
+	    </div>
+
+	  {% endif %}
+
+	  <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
+
+	</form>
+
+{#	<div class="d-flex flex-column">#}
+{#	  <a class="m-auto" href="{% url 'password_reset' %}">Reset password</a>#}
+{#	</div>#}
+
+
 {% endblock %}
