--- a/templates/main/signup.html
+++ b/templates/main/signup.html
@@ -1,92 +1,165 @@
 {% extends "main/base.html" %}
 {% load static %}
 {% block body %}
-    <br>
-    <hr>
-    <div class="jumbotron">
-        {% if registered %}
-            <h1>Thank you for registering!</h1>
-        {% else %}
-        <h1 style="text-align: center">Register Here</h1>
-        <hr>
-<!--        <h3>Just fill out the form.</h3>-->
-        <form enctype="multipart/form-data" method="POST">
-            {% csrf_token %}
-            <div style="color: red">
-                {{ form.non_field_errors }}
-                {% for field in form %}
-                    {% if field.errors %}
-                        <li>{{ field.label }}: {{ field.errors|striptags }}</li>
-                    {% endif %}
-                {% endfor %}
-            </div>
-            <div class="row">
-                <div class="col-lg-1"></div>
-                <div class="col-lg-9">
-                    <div id="register_form">
-                        <div class="md-form">
-                            <label id="{{ form.username.id_for_label }}" for="{{ form.username.id_for_label }}">{{ form.username.label }} : </label>
-                            {{ form.username }}
-                        </div>
-                        <br>
-                        <div class="md-form">
-                            <label id="{{ form.first_name.id_for_label }}" for="{{ form.first_name.id_for_label }}">{{ form.first_name.label }} : </label>
-                            {{ form.first_name }}
-                        </div>
-                        <br>
-                        <div class="md-form">
-                            <label id="{{ form.last_name.id_for_label }}" for="{{ form.last_name.id_for_label }}">{{ form.last_name.label }} : </label>
-                            {{ form.last_name }}
-                        </div>
-                        <br>
-                        <div class="md-form">
-                            <label id="{{ form.email.id_for_label }}" for="{{ form.email.id_for_label }}">{{ form.email.label }} : </label>
-                            {{ form.email }}
-                        </div>
-                        <br>
-                        <div class="md-form">
-                            <label id="{{ form.password1.id_for_label }}" for="{{ form.password1.id_for_label }}">{{ form.password1.label }} : </label>
-                            {{ form.password1 }}
-                        </div>
-                        <br>
-                        <div class="md-form">
-                            <label id="{{ form.password2.id_for_label }}" for="{{ form.password2.id_for_label }}">{{ form.password2.label }} : </label>
-                            {{ form.password2 }}
-                        </div>
-                        <ul>
-                            <li style="font-size: small">Your password can&#39;t be too similar to your other personal information.</li>
-                            <li style="font-size: small">Your password must contain at least 8 characters.</li>
-                            <li style="font-size: small">Your password can&#39;t be a commonly used password.</li>
-                            <li style="font-size: small">Your password can&#39;t be entirely numeric.</li>
-                        </ul>
-                        <br>
-                        <div class="md-form">
-                            <label id="{{ form.company.id_for_label }}" for="{{ form.company.id_for_label }}">{{ form.company.label }} : </label>
-                            {{ form.company }}
-                        </div>
-                        <br>
-                        <div class="md-form">
-                            <label id="{{ form.phone.id_for_label }}" for="{{ form.phone.id_for_label }}">{{ form.phone.label }} : </label>
-                            {{ form.phone }}
-                        </div>
-                        <br>
-                        <div class="md-form">
-                            <label id="{{ form.position.id_for_label }}" for="{{ form.position.id_for_label }}">{{ form.position.label }} : </label>
-                            {{ form.position }}
-                        </div>
-                        <br>
-                    </div>
-                    <div>
-                        <button class="btn btn-primary" type="submit" id="register">
-                            Signup
-                        </button>
-                    </div>
-                </div>
-                <div class="col-lg-1"></div>
-            </div>
+{#    <br>#}
+{#    <hr>#}
+{#    <div class="jumbotron">#}
+{#        {% if registered %}#}
+{#            <h1>Thank you for registering!</h1>#}
+{#        {% else %}#}
+{#        <h1 style="text-align: center">Register Here</h1>#}
+{#        <hr>#}
+{#<!--        <h3>Just fill out the form.</h3>-->#}
+{#        <form enctype="multipart/form-data" method="POST">#}
+{#            {% csrf_token %}#}
+{#            <div style="color: red">#}
+{#                {{ form.non_field_errors }}#}
+{#                {% for field in form %}#}
+{#                    {% if field.errors %}#}
+{#                        <li>{{ field.label }}: {{ field.errors|striptags }}</li>#}
+{#                    {% endif %}#}
+{#                {% endfor %}#}
+{#            </div>#}
+{#            <div class="row">#}
+{#                <div class="col-lg-1"></div>#}
+{#                <div class="col-lg-9">#}
+{#                    <div id="register_form">#}
+{#                        <div class="md-form">#}
+{#                            <label id="{{ form.username.id_for_label }}" for="{{ form.username.id_for_label }}">{{ form.username.label }} : </label>#}
+{#                            {{ form.username }}#}
+{#                        </div>#}
+{#                        <br>#}
+{#                        <div class="md-form">#}
+{#                            <label id="{{ form.first_name.id_for_label }}" for="{{ form.first_name.id_for_label }}">{{ form.first_name.label }} : </label>#}
+{#                            {{ form.first_name }}#}
+{#                        </div>#}
+{#                        <br>#}
+{#                        <div class="md-form">#}
+{#                            <label id="{{ form.last_name.id_for_label }}" for="{{ form.last_name.id_for_label }}">{{ form.last_name.label }} : </label>#}
+{#                            {{ form.last_name }}#}
+{#                        </div>#}
+{#                        <br>#}
+{#                        <div class="md-form">#}
+{#                            <label id="{{ form.email.id_for_label }}" for="{{ form.email.id_for_label }}">{{ form.email.label }} : </label>#}
+{#                            {{ form.email }}#}
+{#                        </div>#}
+{#                        <br>#}
+{#                        <div class="md-form">#}
+{#                            <label id="{{ form.password1.id_for_label }}" for="{{ form.password1.id_for_label }}">{{ form.password1.label }} : </label>#}
+{#                            {{ form.password1 }}#}
+{#                        </div>#}
+{#                        <br>#}
+{#                        <div class="md-form">#}
+{#                            <label id="{{ form.password2.id_for_label }}" for="{{ form.password2.id_for_label }}">{{ form.password2.label }} : </label>#}
+{#                            {{ form.password2 }}#}
+{#                        </div>#}
+{#                        <ul>#}
+{#                            <li style="font-size: small">Your password can&#39;t be too similar to your other personal information.</li>#}
+{#                            <li style="font-size: small">Your password must contain at least 8 characters.</li>#}
+{#                            <li style="font-size: small">Your password can&#39;t be a commonly used password.</li>#}
+{#                            <li style="font-size: small">Your password can&#39;t be entirely numeric.</li>#}
+{#                        </ul>#}
+{#                        <br>#}
+{#                        <div class="md-form">#}
+{#                            <label id="{{ form.company.id_for_label }}" for="{{ form.company.id_for_label }}">{{ form.company.label }} : </label>#}
+{#                            {{ form.company }}#}
+{#                        </div>#}
+{#                        <br>#}
+{#                        <div class="md-form">#}
+{#                            <label id="{{ form.phone.id_for_label }}" for="{{ form.phone.id_for_label }}">{{ form.phone.label }} : </label>#}
+{#                            {{ form.phone }}#}
+{#                        </div>#}
+{#                        <br>#}
+{#                        <div class="md-form">#}
+{#                            <label id="{{ form.position.id_for_label }}" for="{{ form.position.id_for_label }}">{{ form.position.label }} : </label>#}
+{#                            {{ form.position }}#}
+{#                        </div>#}
+{#                        <br>#}
+{#                    </div>#}
+{#                    <div>#}
+{#                        <button class="btn btn-primary" type="submit" id="register">#}
+{#                            Signup#}
+{#                        </button>#}
+{#                    </div>#}
+{#                </div>#}
+{#                <div class="col-lg-1"></div>#}
+{#            </div>#}
+{##}
+{#        </form>#}
+{##}
+{#      {% endif %}#}
+{#    </div>#}
 
-        </form>
+	<style type="text/css">
+  .form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
+  }
 
-      {% endif %}
+  .form-signin .form-control {
+    position: relative;
+    box-sizing: border-box;
+    height: auto;
+    padding: 10px;
+    font-size: 16px;
+  }
+  .form-signin .form-control:focus {
+    z-index: 2;
+  }
+  .form-signin input[type="email"] {
+    margin-bottom: 10px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+  .form-signin input[type="text"] {
+    margin-bottom: 10px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+  .form-signin input[type="password"] {
+    margin-bottom: -1px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+  }
+
+  .h3{
+    text-align: center;
+  }
+
+</style>
+
+
+<form class="form-signin" method="post">{% csrf_token %}
+<div class="d-flex flex-column pb-3">
+{#  <img class="img-fluid mx-auto d-block" src="{% static 'codingwithmitch_logo.png' %}" alt="codingwithmitch logo" width="72" height="72">#}
+</div>
+  <h1 class="h3 mb-3 font-weight-normal">Register an account</h1>
+
+  <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus >
+
+  <input type="text" name="username" id="inputUsername" class="form-control" placeholder="Username" required>
+
+  <input type="password" name="password1" id="inputPassword1" class="form-control" placeholder="Password" required>
+
+  <input type="password" name="password2" id="inputPassword2" class="form-control" placeholder="Confirm password" required>
+
+  {% for field in registration_form %}
+      <p>
+        {% for error in field.errors %}
+          <p style="color: red">{{ error }}</p>
+        {% endfor %}
+      </p>
+  {% endfor %}
+  {% if registration_form.non_field_errors %}
+    <div style="color: red">
+      <p>{{registration_form.non_field_errors}}</p>
     </div>
+
+  {% endif %}
+
+  <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
+
+</form>
 {% endblock %}
