--- a/templates/main/signup.html
+++ b/templates/main/signup.html
@@ -137,13 +137,20 @@
 </div>
   <h1 class="h3 mb-3 font-weight-normal">Register an account</h1>
 
-  <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus >
+    <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus >
 
-  <input type="text" name="username" id="inputUsername" class="form-control" placeholder="Username" required>
+    <input type="text" name="username" id="inputUsername" class="form-control" placeholder="Username" required>
 
-  <input type="password" name="password1" id="inputPassword1" class="form-control" placeholder="Password" required>
+	<input type="text" name="first_name" id="inputFirstName" class="form-control" placeholder="First Name" required >
 
-  <input type="password" name="password2" id="inputPassword2" class="form-control" placeholder="Confirm password" required>
+	<input type="text" name="last_name" id="inputLastName" class="form-control" placeholder="Last Name" required >
+
+	<input type="text" name="company_name" id="inputCompanyName" class="form-control" placeholder="Company Name" required >
+
+	<input type="password" name="password1" id="inputPassword1" class="form-control" placeholder="Password" required>
+
+    <input type="password" name="password2" id="inputPassword2" class="form-control" placeholder="Confirm password" required>
+
 
   {% for field in registration_form %}
       <p>
