--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -41,7 +41,8 @@
               <i class="fas fa-user"></i> Hi, {{ user.first_name }} </a>
 
             <div class="dropdown-menu dropdown-menu-right dropdown-info" aria-labelledby="navbarDropdownMenuLink1">
-              <a class="dropdown-item" href="/profile/details">My account</a>
+              <a class="dropdown-item" href="{% url 'dash' %}">My account</a>
+	            <a class="dropdown-item" href="">Send Message</a>
               <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
             </div>
               {% else %}
