--- a/templates/profiles/gen_sms.html
+++ b/templates/profiles/gen_sms.html
@@ -45,11 +45,11 @@
 {#			<label for="inputFile" id="label_inputFile">Upload your Excel file.</label>#}
 {#			<input type="file" id="inputFile" name="contact_file" class="form-control" required>#}
 {#			<br>#}
-{#			<label for="inputMessage" id="label_inputMessage">Type your message.</label>#}
 {#			<input type="text" id="inputMessage" name="message" class="form-control" placeholder="Type your message here" required>#}
 {#			<br>#}
 			{% render_form serializer %}
-			<input type="text" name="message">
+			<label for="inputMessage" id="label_inputMessage">Type your message.</label>
+			<input type="text" name="message" id="inputMessage class="form-control" >
 			<button class="btn btn-lg btn-primary btn-block" type="submit">Generate message</button>
 		</form>
 	</div>
