--- a/templates/profiles/gen_sms.html
+++ b/templates/profiles/gen_sms.html
@@ -40,6 +40,8 @@
     </style>
 	<br>
 	<div>
+		<h4 style="text-align: center; color: red">Note: Make sure your SIM has an unlimited plan of any Telcom Company else, this service is not for you.</h4>
+		<hr/>
 		<h1 class="h3 mb-3 font-weight-normal">Generate a message to send to contacts.</h1>
 		<form method="post" action="{% url 'send_msg' %}" class="form-message" enctype="multipart/form-data">{% csrf_token %}
 {#			<label for="inputFile" id="label_inputFile">Upload your Excel file.</label>#}
